--- a/src/assets/scss/pages/login/_login.scss
+++ b/src/assets/scss/pages/login/_login.scss
@@ -1,60 +1,2 @@
-.login_wrapper {
-	background-image: url("../img/background_login_page.jpg");
-	height: 100vh;
-	width: 100vw;
-}
+// Strona logowania
 
-.login_place {
-	height: 90vh;
-	background-color: #13bdd2;
-	margin-top: 5vh;
-}
-
-.logo_container {
-	border: 1px solid #ffffff;
-	border-radius: 6px;
-	width: 140px;
-	height: 140px;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	margin-top: 5vh;
-	float: right;
-}
-
-.login_header {
-	text-align: center;
-	color: #ffffff;
-	padding-top: 5vh;
-}
-
-.user_photo {
-	height: 18%;
-	display: block;
-	margin: 70px auto 20px auto;
-}
-
-.user_id {
-	text-align: center;
-	display: block;
-	color: #ffffff;
-	margin-bottom: 20px;
-}
-
-#password {
-	width: 80%;
-	margin: 0 auto;
-}
-
-#change, #submit {
-	display: inline-block;
-	width: 200px;
-}
-
-#change {
-	color: #ffffff;
-}
-
-#submit {
-	background-color: #ffffff;
-}
