Ostylowanie całości strony, dodanie wszystkich elementów w HTML

--- a/src/assets/scss/_colors.scss
+++ b/src/assets/scss/_colors.scss
@@ -1,7 +1,9 @@
 // Kolory czcionek
 $font-primary-color: #ffffff;
+$font-secondary-color: #000000;
 
 $primary-background-color: #13bdd2;
 
 $primary-buttons-color: #ffffff;
-$hover-buttons-color:  ;
+
+$hover-color: #017686;
