Rozdzielenie styli na poszczególne komponenty

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -6,6 +6,7 @@
 // Komponenty
 @import "components/buttons";
 @import "components/form_elements";
+@import "components/logo_container";
 
 // Strona logowania
 @import "pages/login/box";
