--- a/src/assets/scss/components/_form_elements.scss
+++ b/src/assets/scss/components/_form_elements.scss
@@ -72,3 +72,20 @@
 		border: 2px solid $hover-color;
 	}
 }
+
+@media (max-width: 768px) {
+	.password-input {
+		input {
+			max-width: 80%;
+		}
+	}
+	#keyboard-activate {
+		margin-left: 16px;
+	}
+}
+
+@media (max-width: 640px) {
+	.user-photo {
+		margin-top: 0px;
+	}
+}
