--- a/src/assets/scss/pages/login/_box.scss
+++ b/src/assets/scss/pages/login/_box.scss
@@ -2,6 +2,7 @@
 .login-box {
 	height: 88vh;
 	max-height: 620px;
+	min-height: 580px;
 	position: relative;
 	background-color: $primary-background-color;
 	border-radius: 6px;
