--- a/src/assets/scss/components/_form_elements.scss
+++ b/src/assets/scss/components/_form_elements.scss
@@ -25,6 +25,11 @@
 	font-size: 18px;
 }
 
+.login-number-tip {
+	display: none;
+	font-size: 18px;
+}
+
 #clear-login {
 	font-size: 12px;
 	cursor: pointer;
@@ -56,6 +61,19 @@
 #clear-login:hover,
 #keyboard-activate:hover {
 	color: $hover-color;
+}
+
+.login-number-input {
+	display: none;
+	max-width: 90%;
+	border-radius: 3px;
+	font-size: 18px;
+	text-align: center;
+}
+
+.login-number-input:focus {
+	outline: none;
+	border: 2px solid $hover-color;
 }
 
 .password-input {
