Poprawienie wyświetlania alertów, zmniejszenie rozmiaru okienka z alertami do szerokości inputów

--- a/src/assets/scss/components/_form_elements.scss
+++ b/src/assets/scss/components/_form_elements.scss
@@ -97,7 +97,7 @@
 .alert.callout {
 	padding-bottom: 0px;
 	padding-top: 5px;
-	width: 100%;
+	max-width: 90%;
 	margin: 0 auto 1rem auto;
 	background-color: #F04124;
 	color: #ffffff;
