--- a/src/assets/scss/pages/budgets/_budgets.scss
+++ b/src/assets/scss/pages/budgets/_budgets.scss
@@ -22,6 +22,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	position: relative;
 	
 }
 
@@ -53,4 +54,23 @@
 
 .fifth-circle {
 	background-color: deepskyblue;
+}
+
+.close-button {
+	position: absolute;
+	top: 0px;
+	right: 0px;
+	font-size: 25px;
+	font-weight: bold;
+	display: none;
+}
+
+.active-circle {
+	width: 180px;
+	height: 180px;
+	border-radius: 50%;
+	background-color: lightgray;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
